--- a/bin/fxml/task_cell.fxml
+++ b/bin/fxml/task_cell.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
-
 
 <AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -15,11 +13,7 @@
          <items>
             <BorderPane maxWidth="150.0" prefHeight="35.0" prefWidth="52.0">
                <center>
-                  <Label fx:id="lblTraceID" alignment="CENTER" prefHeight="27.0" prefWidth="57.0" BorderPane.alignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
+                  <Label fx:id="lblTraceID" alignment="CENTER" prefHeight="27.0" prefWidth="57.0" BorderPane.alignment="CENTER" />
                </center>
             </BorderPane>
             <ScrollPane fx:id="scrollPaneTrace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.55" vbarPolicy="NEVER">
