--- a/bin/fxml/instantiator.fxml
+++ b/bin/fxml/instantiator.fxml
@@ -161,7 +161,7 @@
               </AnchorPane>
             <AnchorPane id="Content" prefHeight="505.0" prefWidth="911.0">
                      <children>
-                        <Label fx:id="lblProgressBar" layoutX="60.0" layoutY="14.0" prefHeight="18.0" prefWidth="509.0" text="Not started" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="14.0" />
+                        <Label fx:id="lblProgressBar" layoutX="60.0" layoutY="14.0" prefHeight="18.0" prefWidth="509.0" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="14.0" />
                         <ProgressBar fx:id="progressBar" layoutX="60.0" layoutY="67.0" prefHeight="8.0" prefWidth="380.0" progress="0.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="40.0" />
                         <TableView fx:id="tableViewMap" prefHeight="206.0" prefWidth="304.0" style="-fx-border-color: grey;" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="70.0">      
                             </TableView>
