--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -26,7 +26,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="890.0" prefWidth="1345.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TraceViewerController">
+<AnchorPane prefHeight="890.0" prefWidth="1345.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TraceViewerController">
    <children>
       <SplitPane dividerPositions="0.31571109456440805" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -99,7 +99,7 @@
                                           <Pane prefHeight="20.0" prefWidth="6.0" />
                                           <Label fx:id="lblSystemFileCheck" prefHeight="16.0" prefWidth="267.0">
                                              <font>
-                                                <Font size="14.0" />
+                                                <Font size="16.0" />
                                              </font>
                                           </Label>
                                        </children>
@@ -114,7 +114,7 @@
                                           <Pane prefHeight="20.0" prefWidth="6.0" />
                                           <Label fx:id="lblNumOfActions" prefHeight="2.0" prefWidth="267.0">
                                              <font>
-                                                <Font size="14.0" />
+                                                <Font size="16.0" />
                                              </font>
                                           </Label>
                                        </children>
@@ -129,7 +129,7 @@
                                           <Pane prefHeight="20.0" prefWidth="6.0" />
                                           <Label fx:id="lblNumOfStates" prefHeight="0.0" prefWidth="267.0">
                                              <font>
-                                                <Font size="14.0" />
+                                                <Font size="16.0" />
                                              </font>
                                           </Label>
                                        </children>
@@ -308,7 +308,7 @@
                                     <Pane prefHeight="20.0" prefWidth="6.0" />
                                     <Label fx:id="lblFilter" prefHeight="20.0" prefWidth="736.0">
                                        <font>
-                                          <Font size="14.0" />
+                                          <Font name="System Bold" size="16.0" />
                                        </font>
                                     </Label>
                                  </children>
