--- a/bin/fxml/instantiator.fxml
+++ b/bin/fxml/instantiator.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableView?>
@@ -21,11 +23,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.5" maxHeight="3200.0" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.InstantiatorController">
+<SplitPane dividerPositions="0.5" maxHeight="3200.0" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.InstantiatorController">
    <items>
       <VBox prefWidth="1198.0">
         <children>
@@ -161,68 +164,129 @@
               </AnchorPane>
             <AnchorPane id="Content" prefHeight="505.0" prefWidth="911.0">
                      <children>
-                        <Label fx:id="lblProgressBar" layoutX="60.0" layoutY="14.0" prefHeight="18.0" prefWidth="509.0" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="14.0" />
-                        <ProgressBar fx:id="progressBar" layoutX="60.0" layoutY="67.0" prefHeight="8.0" prefWidth="380.0" progress="0.0" AnchorPane.leftAnchor="60.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="40.0" />
-                        <TableView fx:id="tableViewMap" prefHeight="206.0" prefWidth="304.0" style="-fx-border-color: grey;" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="70.0">      
-                            </TableView>
-                        <ListView fx:id="listViewSets" layoutX="377.0" layoutY="70.0" prefHeight="206.0" prefWidth="474.0" AnchorPane.leftAnchor="377.0" AnchorPane.rightAnchor="60.0" />
-                        <HBox alignment="CENTER" layoutX="159.0" layoutY="277.0" prefHeight="39.0" prefWidth="694.0" spacing="5.0" AnchorPane.rightAnchor="58.200000000000045">
+                        <VBox layoutX="10.0" layoutY="14.0" prefHeight="704.0" prefWidth="858.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                            <children>
-                              <HBox alignment="CENTER" prefHeight="39.0" prefWidth="539.0">
+                              <HBox prefHeight="29.0" prefWidth="874.0">
                                  <children>
-                                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="205.0">
-                                       <children>
-                                          <Label alignment="CENTER" prefHeight="19.0" prefWidth="107.0" text="Parallel Instances">
-                                             <font>
-                                                <Font size="13.0" />
-                                             </font>
-                                          </Label>
-                                          <Spinner fx:id="instancesSpinner" disable="true" prefHeight="25.0" prefWidth="50.0" />
-                                       </children>
-                                    </HBox>
-                                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                                       <children>
-                                          <Label alignment="CENTER" prefHeight="19.0" prefWidth="107.0" text="Parallel Activities">
-                                             <font>
-                                                <Font size="13.0" />
-                                             </font>
-                                          </Label>
-                                          <Spinner fx:id="activitiesSpinner" disable="true" prefHeight="25.0" prefWidth="50.0" />
-                                       </children>
-                                    </HBox>
-                                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="249.0">
-                                       <children>
-                                          <Label alignment="CENTER" prefHeight="19.0" prefWidth="162.0" text="Matching Threshold (*100)">
-                                             <font>
-                                                <Font size="13.0" />
-                                             </font>
-                                          </Label>
-                                          <Spinner fx:id="matchingSpinner" disable="true" prefHeight="25.0" prefWidth="50.0" />
-                                       </children>
-                                    </HBox>
+                                    <ProgressIndicator fx:id="progressBar" prefHeight="19.0" prefWidth="35.0" />
+                                    <Label fx:id="lblProgressBar" prefHeight="42.0" prefWidth="440.0" />
                                  </children>
                               </HBox>
-                              <Button fx:id="btnAnalyse" disable="true" mnemonicParsing="false" onAction="#analyseInstances" prefHeight="32.0" prefWidth="145.0" text="Analyse" />
+                              <HBox alignment="CENTER_LEFT" prefHeight="206.0" prefWidth="894.0" spacing="15.0">
+                                 <children>
+                                    <StackPane>
+                                       <children>
+                                          <TableView fx:id="tableViewMap" prefHeight="206.0" prefWidth="304.0" style="-fx-border-color: grey;">      
+                            </TableView>
+                                          <HBox fx:id="hboxLblEntityAssetMap" alignment="CENTER" prefHeight="206.0" prefWidth="304.0" style="-fx-background-color: white; -fx-border-color: grey;">
+                                             <children>
+                                                <Label fx:id="lblEntityAssetMap11" text="Entity-Asset Map" textFill="#928a8a">
+                                                   <font>
+                                                      <Font size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </StackPane>
+                                    <StackPane prefHeight="206.0" prefWidth="572.0">
+                                       <children>
+                                          <ListView fx:id="listViewSets" prefHeight="206.0" prefWidth="474.0" />
+                                          <HBox fx:id="hboxLblEntityAssetSets" alignment="CENTER" prefHeight="206.0" prefWidth="482.0" style="-fx-background-color: white; -fx-border-color: grey;">
+                                             <children>
+                                                <Label fx:id="lblEntityAssetMap1" text="Asset Sets" textFill="#928a8a">
+                                                   <font>
+                                                      <Font size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </StackPane>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_RIGHT" prefHeight="39.0" prefWidth="694.0" spacing="5.0">
+                                 <children>
+                                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="539.0">
+                                       <children>
+                                          <HBox alignment="CENTER" prefHeight="39.0" prefWidth="205.0">
+                                             <children>
+                                                <Label alignment="CENTER" prefHeight="19.0" prefWidth="107.0" text="Parallel Instances">
+                                                   <font>
+                                                      <Font size="13.0" />
+                                                   </font>
+                                                </Label>
+                                                <Spinner fx:id="instancesSpinner" disable="true" prefHeight="25.0" prefWidth="50.0" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                             <children>
+                                                <Label alignment="CENTER" prefHeight="19.0" prefWidth="107.0" text="Parallel Activities">
+                                                   <font>
+                                                      <Font size="13.0" />
+                                                   </font>
+                                                </Label>
+                                                <Spinner fx:id="activitiesSpinner" disable="true" prefHeight="25.0" prefWidth="50.0" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" prefHeight="39.0" prefWidth="249.0">
+                                             <children>
+                                                <Label alignment="CENTER" prefHeight="19.0" prefWidth="162.0" text="Matching Threshold (*100)">
+                                                   <font>
+                                                      <Font size="13.0" />
+                                                   </font>
+                                                </Label>
+                                                <Spinner fx:id="matchingSpinner" disable="true" prefHeight="25.0" prefWidth="50.0" />
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </HBox>
+                                    <Button fx:id="btnAnalyse" disable="true" mnemonicParsing="false" onAction="#analyseInstances" prefHeight="32.0" prefWidth="145.0" text="Analyse" />
+                                 </children>
+                              </HBox>
+                              <VBox>
+                                 <children>
+                                    <Separator prefWidth="200.0" />
+                                    <HBox>
+                                       <children>
+                                          <Label prefHeight="32.0" prefWidth="234.0" text="Generated Potential Incident Traces">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="lblNumOfTraces" prefHeight="31.0" prefWidth="358.0">
+                                             <font>
+                                                <Font name="System Bold" size="14.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </HBox>
+                                    <HBox prefHeight="17.0" prefWidth="721.0">
+                                       <children>
+                                          <Pane prefHeight="17.0" prefWidth="26.0" />
+                                          <Label prefHeight="17.0" prefWidth="57.0" text="Trace-ID  " textFill="#8a8686">
+                                             <font>
+                                                <Font name="System Bold" size="12.0" />
+                                             </font>
+                                          </Label>
+                                          <Separator orientation="VERTICAL" prefHeight="18.0" prefWidth="11.0" />
+                                          <Label prefHeight="17.0" prefWidth="424.0" text="State-number =[action name]=&gt; State-number =[action name]=&gt; ..." textFill="#8a8686" />
+                                       </children>
+                                    </HBox>
+                                    <StackPane alignment="BOTTOM_CENTER" prefHeight="324.0" prefWidth="874.0">
+                                       <children>
+                                          <ListView fx:id="listViewTraces" prefHeight="330.0" prefWidth="907.0" />
+                                          <Label fx:id="lblListViewTracesEmpty" alignment="CENTER" prefHeight="395.0" prefWidth="858.0" text="List Empty " textFill="#a19494">
+                                             <font>
+                                                <Font size="24.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </StackPane>
+                                 </children>
+                              </VBox>
                            </children>
-                        </HBox>
-                        <HBox fx:id="panelAssetSets" alignment="CENTER" layoutX="377.0" layoutY="70.0" prefHeight="206.0" prefWidth="482.0" style="-fx-background-color: white; -fx-border-color: grey;" AnchorPane.leftAnchor="377.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="70.0">
-                           <children>
-                              <Label fx:id="lblEntityAssetMap1" text="Asset Sets" textFill="#928a8a">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </HBox>
-                        <HBox fx:id="panelEntityAssetMap" alignment="CENTER" layoutX="60.0" layoutY="70.0" prefHeight="206.0" prefWidth="304.0" style="-fx-background-color: white; -fx-border-color: grey;">
-                           <children>
-                              <Label fx:id="lblEntityAssetMap11" text="Entity-Asset Map" textFill="#928a8a">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </HBox>
+                        </VBox>
                      </children>
                   </AnchorPane>
             </items>
