--- a/src/fxml/task_cell.fxml
+++ b/src/fxml/task_cell.fxml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="rootPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <SplitPane fx:id="splitPaneTrace" dividerPositions="0.08487654320987655" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="720.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
-         <items>
-            <BorderPane maxWidth="150.0" prefHeight="35.0" prefWidth="52.0">
-               <center>
-                  <Label fx:id="lblTraceID" alignment="CENTER" prefHeight="27.0" prefWidth="57.0" BorderPane.alignment="CENTER" />
-               </center>
-            </BorderPane>
-            <ScrollPane fx:id="scrollPaneTrace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.55" vbarPolicy="NEVER">
-               <content>
-                  <HBox fx:id="hbox" alignment="CENTER_LEFT" prefHeight="43.0" />
-               </content>
-            </ScrollPane>
-         </items>
-      </SplitPane>
+      <VBox fx:id="vboxMain">
+         <children>
+            <SplitPane fx:id="splitPaneTrace" dividerPositions="0.08487654320987655" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="720.0">
+               <items>
+                  <BorderPane maxWidth="150.0" prefHeight="35.0" prefWidth="52.0">
+                     <center>
+                        <Label fx:id="lblTraceID" alignment="CENTER" prefHeight="27.0" prefWidth="57.0" BorderPane.alignment="CENTER" />
+                     </center>
+                  </BorderPane>
+                  <ScrollPane fx:id="scrollPaneTrace" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" opacity="0.55" vbarPolicy="NEVER">
+                     <content>
+                        <HBox fx:id="hbox" alignment="CENTER_LEFT" prefHeight="43.0" />
+                     </content>
+                  </ScrollPane>
+               </items>
+            </SplitPane>
+         </children>
+      </VBox>
+      <HBox fx:id="hboxOptions" alignment="CENTER" layoutX="271.0" layoutY="13.0" prefHeight="30.0" prefWidth="112.0" spacing="5.0" visible="false" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="8.0">
+         <children>
+            <Label />
+            <Button fx:id="btnShowEntities" mnemonicParsing="false" onAction="#showEntities" text="Entities" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
