--- a/src/fxml/InstantiationDetails.fxml
+++ b/src/fxml/InstantiationDetails.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -7,16 +8,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-
-<AnchorPane fx:id="anchorPaneMain" prefHeight="100.0" prefWidth="720.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="controller.instantiation.analysis.InstantiationDetailsController">
+<AnchorPane fx:id="anchorPaneMain" prefHeight="134.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.instantiation.analysis.InstantiationDetailsController">
    <children>
-      <HBox alignment="CENTER_LEFT" layoutX="8.0" layoutY="6.0" prefHeight="44.0" prefWidth="700.0" spacing="5.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="6.0">
+      <HBox alignment="CENTER_LEFT" layoutX="8.0" layoutY="6.0" prefHeight="55.0" prefWidth="713.0" spacing="5.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="6.0">
          <children>
             <Label text="Top Entities" />
             <ComboBox fx:id="comboBoxTopK" prefHeight="25.0" prefWidth="28.0" />
-            <ScrollPane prefHeight="48.0" prefWidth="575.0" vbarPolicy="NEVER">
+            <ScrollPane prefHeight="44.0" prefWidth="590.0" vbarPolicy="NEVER">
                <content>
-                  <HBox fx:id="hboxEntities" alignment="CENTER_LEFT" prefHeight="34.0" spacing="10.0" />
+                  <HBox fx:id="hboxEntities" prefHeight="45.0" spacing="10.0">
+                     <padding>
+                        <Insets left="5.0" top="5.0" />
+                     </padding></HBox>
                </content>
             </ScrollPane>
          </children>
