--- a/bin/fxml/ShowTraceInSystem.fxml
+++ b/bin/fxml/ShowTraceInSystem.fxml
@@ -6,13 +6,17 @@
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane prefHeight="633.0" prefWidth="1066.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.instantiation.analysis.TraceViewerInSystemController">
-   <children>
-      <HBox alignment="CENTER_LEFT" layoutX="-1.0" layoutY="-39.0" prefHeight="32.0" prefWidth="950.0" spacing="5.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+
+<BorderPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.instantiation.analysis.TraceViewerInSystemController">
+   <center>
+      <StackPane fx:id="mainStackPane" prefHeight="525.0" prefWidth="955.0" style="-fx-background-color: white;" />
+   </center>
+   <top>
+      <HBox alignment="CENTER_LEFT" prefHeight="32.0" prefWidth="950.0" spacing="5.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="btnLoadTransitionSystem" mnemonicParsing="false" onAction="#loadTransitionSystem" text="Load transition System" />
             <ProgressIndicator fx:id="progressIndicator" prefHeight="6.0" prefWidth="41.0" visible="false" />
@@ -23,8 +27,9 @@
             <Button fx:id="btnSaveTrace" mnemonicParsing="false" onAction="#saveTrace" text="save" />
          </children>
       </HBox>
-      <StackPane fx:id="mainStackPane" layoutY="30.0" prefHeight="525.0" prefWidth="955.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
-      <HBox alignment="CENTER" layoutY="708.0" prefHeight="25.0" prefWidth="1061.0" spacing="3.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+   </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="25.0" prefWidth="1061.0" spacing="3.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
             <Button mnemonicParsing="false" onAction="#showPreviousTrace" text="&lt;">
                <tooltip>
@@ -43,5 +48,5 @@
             <Insets bottom="5.0" left="5.0" />
          </padding>
       </HBox>
-   </children>
-</AnchorPane>
+   </bottom>
+</BorderPane>
